// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Options Query Given a request for asset options should generate the correct request 1`] = `
Object {
  "data": Object {
    "search": Object {
      "query": "asset",
    },
  },
  "method": "POST",
  "url": "/api/datasources/proxy/6/cogniteapi/TestProject/assets/search",
}
`;

exports[`Dropdown Options Query Given a request for asset options should return the assets with asset in their name 1`] = `
Array [
  Object {
    "description": "test asset 1",
    "label": "asset 1",
    "value": "123",
  },
  Object {
    "description": "test asset 2",
    "label": "asset 2",
    "value": "456",
  },
  Object {
    "description": "test asset 3",
    "label": "asset 3",
    "value": "789",
  },
]
`;

exports[`Dropdown Options Query Given a request for asset options with additional options should generate the correct request 1`] = `
Object {
  "data": Object {
    "search": Object {
      "query": "asset",
    },
  },
  "method": "POST",
  "url": "/api/datasources/proxy/6/cogniteapi/TestProject/assets/search?metadata=%7B%22key1%22%3A%22value1%22%7D",
}
`;

exports[`Dropdown Options Query Given a request for asset options with additional options should return the assets with asset in their name and metadata.key1 = value1 1`] = `
Array [
  Object {
    "description": "test asset 1",
    "label": "asset 1",
    "value": "123",
  },
]
`;

exports[`Dropdown Options Query Given a request for timeseries options should generate the correct request 1`] = `
Object {
  "data": Object {
    "search": Object {
      "query": "Timeseries",
    },
  },
  "method": "POST",
  "url": "/api/datasources/proxy/6/cogniteapi/TestProject/timeseries/search",
}
`;

exports[`Dropdown Options Query Given a request for timeseries options should return timeseries with Timeseries in their name 1`] = `
Array [
  Object {
    "description": "testA",
    "label": "Timeseries1",
    "value": "1",
  },
  Object {
    "description": "testB",
    "label": "Timeseries2",
    "value": "2",
  },
  Object {
    "description": "testC",
    "label": "Timeseries3",
    "value": "3",
  },
  Object {
    "description": "testD",
    "label": "Timeseries4",
    "value": "4",
  },
  Object {
    "description": "testE",
    "label": "Timeseries5",
    "value": "5",
  },
]
`;

exports[`Dropdown Options Query Given an empty request for asset options should generate the correct request 1`] = `
Object {
  "data": Object {},
  "method": "POST",
  "url": "/api/datasources/proxy/6/cogniteapi/TestProject/assets/search",
}
`;

exports[`Dropdown Options Query Given an empty request for asset options should return all assets 1`] = `
Array [
  Object {
    "description": "test asset 1",
    "label": "asset 1",
    "value": "123",
  },
  Object {
    "description": "test asset 2",
    "label": "asset 2",
    "value": "456",
  },
  Object {
    "description": "test asset 3",
    "label": "asset 3",
    "value": "789",
  },
  Object {
    "description": "bar",
    "label": "foo",
    "value": "999",
  },
]
`;

exports[`Dropdown Options Query Given an empty request for timeseries options should generate the correct request 1`] = `
Object {
  "data": Object {},
  "method": "POST",
  "url": "/api/datasources/proxy/6/cogniteapi/TestProject/timeseries/search",
}
`;

exports[`Dropdown Options Query Given an empty request for timeseries options should return all timeseries 1`] = `
Array [
  Object {
    "description": "testA",
    "label": "Timeseries1",
    "value": "1",
  },
  Object {
    "description": "testB",
    "label": "Timeseries2",
    "value": "2",
  },
  Object {
    "description": "testC",
    "label": "Timeseries3",
    "value": "3",
  },
  Object {
    "description": "testD",
    "label": "Timeseries4",
    "value": "4",
  },
  Object {
    "description": "testE",
    "label": "Timeseries5",
    "value": "5",
  },
  Object {
    "description": undefined,
    "label": "Test",
    "value": "6",
  },
]
`;
